# llm-wiki-template

./: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  index.md  quickstart.md
docs/conventions/: frontmatter.md  linking.md
docs/operations/: agent-maintenance.md  agents-downstream-abstraction.md  obsidian.md  publishing.md  validation.md
docs/reference/: page-taxonomy.md
docs/workflows/: ingest.md  lint.md  query.md
examples/: README.md
examples/raw/processed/2026/: mini-note.md
examples/wiki/: index.md  mini-analysis.md  mini-comparison.md  mini-concept.md  mini-log.md  mini-source-note.md
raw/: README.md
raw/processed/2026/: pdf-ingest-demo.md
scripts/: bootstrap.py  ingest_pdf.py  intake_inbox.py  render_taxonomy_doc.py  validate_docs_links.py  validate_wiki.py  wiki_search.py  wiki_wikilinks.py
templates/: analysis-page.md  comparison-page.md  concept-page.md  entity-page.md  glossary-page.md  ingest-checklist.md  lint-checklist.md  overview-page.md  source-note.md  timeline-page.md
tests/: test_ingest_pdf.py  test_log_format.py  test_validate_docs_links.py  test_validate_wiki.py
wiki/: index.md  log.md
wiki/concepts/: llm-wiki-pattern.md  pdf-to-markdown-ingest.md
wiki/source-notes/: pdf-ingest-demo.md
